# llm-customization-ops

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: eval_gates.json  prompt_templates.json
docker/: Dockerfile.serve  Dockerfile.train  compose.yml  prometheus.yml
docs/: architecture.md  evaluation.md  observability.md  training.md
scripts/: download_model.sh  run_smoke.sh
src/llm_customization_ops/: __init__.py  cli.py  config.py
src/llm_customization_ops/data/: make_pref_dataset.py  make_sft_dataset.py  schema.py
src/llm_customization_ops/data/fixtures/: pref.jsonl  sft.jsonl
src/llm_customization_ops/eval/: gates.py  harness.py  metrics.py
src/llm_customization_ops/eval/golden/: golden.jsonl
src/llm_customization_ops/ops/: __init__.py  health.py  logging.py  tracing.py  utils.py
src/llm_customization_ops/serving/: __init__.py  app.py  metrics.py  model_loader.py  routes.py  schemas.py  telemetry.py
src/llm_customization_ops/training/: __init__.py  callbacks.py  distill.py  dpo.py  registry.py  sft_lora.py  sft_qlora.py
tests/: test_api_integration.py  test_data_pipeline.py  test_eval_gates.py  test_registry.py  test_training_smoke_cpu.py
